Swagger for two routes is ready
